src/app/components/parts/privacy-footer/privacy-footer.component.css
.footer {
    width: 100%;
    display: flex;
    justify-content: center;
    background-color: white;
    border-top: 1px solid lightgrey;
}

.footer img {
    width: 40px;
    height: auto;
}

.footer .logo {
    display: flex;
    align-items: center;
}

.label {
    font-size: x-small;
}

.container {
    padding: 1rem 0 1rem 0;
    display: flex;
    align-items: center;
    justify-content: space-between;
    flex-direction: row;
    width: 100%;
    max-width: 80em;
}


@media (min-width: 0px) and (max-width: 1200px) {

    .label {
        margin-left: 5px;
        margin-right: 5px;
    }
}

